fixed line spacing

--- a/src/component/Home.scss
+++ b/src/component/Home.scss
@@ -27,6 +27,7 @@
     color: #2C211B;
     font-family: 'Fjalla One';
     font-size: 80px;
+    line-height: 120%;
 }
 
 .intro {
@@ -69,11 +70,5 @@
 .resumeButton:hover {
     background-color: #FF9900 !important;
     color: white !important;
-}
-
-.noPadding {
-    padding: 0px !important;
-    margin-top: -10px !important;
-    margin-bottom: -10px !important;
 }
 
